tests/checker/bad/lib/TestLibCycle1.scillib
scilla_version 0

import TestLibCycle2

library TestLibCycle1
